# mcp-gemini

./: README.md
backend/: .env  client_test.py  config.py  pyproject.toml  requirements.txt  server-sem-ia.py  server.py
material-contexto/: instruçoes-codigo.md
material-contexto/Fast-mpc/: como-construir-mcp.txt  fastmcp-resumido.md
material-contexto/documentação/: clientes-omie.txt  pedidos-omie.txt
